selfhost/test/parser/grouped_error_wrong_closing.out
Error at %FILE_NAME%:1:14
Unexpected token '}', expected ')':
  |  (12 * (3 + 4)}
                  ^